test/negative-tests/disabling/lib/test_ref.mli
type t =
  | Init
  | Set_by_inline_test
[@@deriving sexp, compare ~localize]

val value : unit -> t
